[package]
name = "steam-blocker"
version = "0.1.0"
authors = ["FssAy <49795742+DmitrijVC@users.noreply.github.com>"]
edition = "2018"

[profile.release]
opt-level = 3

[dependencies]
libloading = "0.7.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
registry = "1.1.0"

[dependencies.iced]
version = "0.2.0"
features = ["canvas", "tokio", "debug"]

[dependencies.winapi]
version = "0.3.9"
default-features = false
optional = false
features = ["wincon"]
